--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -9,17 +9,17 @@
   <!-- 기존 베타 공통 스타일 -->
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
   <!-- 관리자 전용 스타일 -->
-  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251215-a1" />
+  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251215-r1" />
 
   <!-- 관리자 전용 스크립트 -->
-  <script type="module" src="/assets/admin-beta.js?v=20251215-a1"></script>
+  <script type="module" src="/assets/admin-beta.js?v=20251215-r1"></script>
 </head>
+
 <body class="beta-body">
 
   <!-- ===== 상단 헤더 (베타 공통) ===== -->
   <header class="huchu-header beta-header" role="banner">
     <div class="huchu-header__inner beta-header__inner">
-      <!-- 로고 -->
       <a href="/" class="huchu-logo" aria-label="후추 Huchu 홈">
         <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
         <span class="logo-fallback">
@@ -28,7 +28,6 @@
         </span>
       </a>
 
-      <!-- MENU + 드롭다운 -->
       <button id="betaMenuToggle"
               class="beta-menu-toggle"
               type="button"
@@ -64,8 +63,8 @@
 
         <!-- 탭 버튼 -->
         <div class="admin-tabs">
-          <button type="button" class="admin-tab-btn is-active" data-tab="stats">온투업 통계 저장</button>
-          <button type="button" class="admin-tab-btn" data-tab="lenders">온투업체 정보 등록</button>
+          <button class="admin-tab-btn is-active" data-tab="stats" type="button">온투업 통계 저장</button>
+          <button class="admin-tab-btn" data-tab="lenders" type="button">온투업체 정보 등록</button>
         </div>
 
         <!-- ================== TAB 1: 온투업 통계 저장 ================== -->
@@ -83,7 +82,6 @@
               </div>
             </div>
 
-            <!-- 대출현황 summary -->
             <div class="admin-field-group">
               <h2 class="admin-field-title">2. 온투업 대출현황 요약</h2>
               <p class="admin-note">
@@ -102,44 +100,29 @@
                 </div>
                 <div class="admin-field">
                   <label for="statsTotalLoan">누적대출금액 (원)</label>
-                  <input type="text"
-                         id="statsTotalLoan"
-                         class="admin-input"
-                         data-type="money"
-                         placeholder="예) 18358007760000" />
+                  <input type="text" id="statsTotalLoan" class="admin-input" data-type="money" placeholder="예) 18358007760000" />
                 </div>
                 <div class="admin-field">
                   <label for="statsTotalRepaid">누적상환금액 (원)</label>
-                  <input type="text"
-                         id="statsTotalRepaid"
-                         class="admin-input"
-                         data-type="money"
-                         placeholder="예) 16924144010000" />
+                  <input type="text" id="statsTotalRepaid" class="admin-input" data-type="money" placeholder="예) 16924144010000" />
                 </div>
                 <div class="admin-field">
                   <label for="statsBalance">대출잔액 (원)</label>
-                  <input type="text"
-                         id="statsBalance"
-                         class="admin-input"
-                         data-type="money"
-                         placeholder="예) 1433867500000" />
+                  <input type="text" id="statsBalance" class="admin-input" data-type="money" placeholder="예) 1433867500000" />
                 </div>
               </div>
             </div>
 
-            <!-- 상품유형별 대출잔액 -->
             <div class="admin-field-group">
               <h2 class="admin-field-title">3. 상품유형별 대출잔액</h2>
               <p class="admin-note">
                 전체 대출잔액 대비 <strong>비율(%)</strong>을 입력하면 금액(원)은 자동 계산됩니다.
-                (베타 통계 페이지에서는 조/억/만원 단위로 자동 포맷됩니다.)
               </p>
 
               <div class="admin-subbox">
                 <h3 class="admin-subbox-title">상품유형별 잔액 입력</h3>
                 <p class="admin-subbox-help">
-                  비율을 입력하면 잔액(원) 칸이 자동으로 채워집니다. 잔액 칸을 직접 수정하면
-                  비율과 일치하지 않을 수 있으니 가급적 비율 기준으로 입력하세요.
+                  비율을 입력하면 잔액(원) 칸이 자동으로 채워집니다.
                 </p>
 
                 <table class="admin-table" style="width:100%;border-collapse:collapse;font-size:13px;">
@@ -154,111 +137,68 @@
                     <tr data-key="부동산담보">
                       <td style="padding:6px 4px;">부동산담보</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="부동산담보"
-                               min="0" max="100" step="0.1"
-                               placeholder="예) 43" />
+                        <input type="number" class="admin-input js-ratio" data-key="부동산담보" min="0" max="100" step="0.1" placeholder="예) 43" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="부동산담보"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="부동산담보" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="부동산PF">
                       <td style="padding:6px 4px;">부동산PF</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="부동산PF"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="부동산PF" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="부동산PF"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="부동산PF" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="어음·매출채권담보">
                       <td style="padding:6px 4px;">어음·매출채권담보</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="어음·매출채권담보"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="어음·매출채권담보" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="어음·매출채권담보"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="어음·매출채권담보" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="기타담보(주식 등)">
                       <td style="padding:6px 4px;">기타담보(주식 등)</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="기타담보(주식 등)"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="기타담보(주식 등)" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="기타담보(주식 등)"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="기타담보(주식 등)" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="개인신용">
                       <td style="padding:6px 4px;">개인신용</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="개인신용"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="개인신용" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="개인신용"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="개인신용" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="법인신용">
                       <td style="padding:6px 4px;">법인신용</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="법인신용"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="법인신용" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="법인신용"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="법인신용" data-type="money" readonly />
                       </td>
                     </tr>
+
                   </tbody>
                 </table>
               </div>
             </div>
 
-            <!-- 저장 버튼 -->
             <div class="admin-field-group">
               <button type="button" id="saveOntuStatsBtn" class="admin-save-btn">
                 온투업 통계 데이터 저장
@@ -271,68 +211,60 @@
         <!-- ================== TAB 2: 온투업체 정보 등록 ================== -->
         <section id="admin-tab-lenders" class="admin-tab-panel hide">
           <div class="admin-card">
+
             <div class="admin-field-group">
-              <h2 class="admin-field-title">1. 온투업체 기본 설정</h2>
+              <h2 class="admin-field-title">온투업체 정보 등록</h2>
               <p class="admin-note">
-                온투업체별 <strong>신규대출 취급여부 / 제휴업체 여부</strong>,
-                <strong>취급 상품군</strong>, <strong>상담 채널</strong> 등을 등록합니다.<br />
-                이 설정값은 <strong>후추 네비게이션(베타)</strong>에서 추천 리스트 계산에 사용됩니다.
+                · 업체별 접기/펼치기 유지<br />
+                · <strong>제휴 ON인 업체만</strong> 입력 가능<br />
+                · “취급 대출 종류”는 <strong>시안 기준 5개 enum 고정</strong> (부동산 유형별 하위 카테고리)
               </p>
             </div>
 
-            <!-- ✅ (C) 검색/필터 컨트롤 -->
-            <div class="admin-field-group admin-lenders-controls">
-              <div class="admin-field-grid admin-lenders-controls__grid">
-                <div class="admin-field">
-                  <label for="lenderSearchInput">온투업체 검색</label>
-                  <input id="lenderSearchInput"
-                         type="text"
-                         class="admin-input"
-                         placeholder="예) FM펀딩, 에잇퍼센트, 피플펀드..." />
-                </div>
-
-                <div class="admin-field">
-                  <label>필터</label>
-                  <div class="admin-filter-row">
-                    <label class="admin-filter-check">
-                      <input type="checkbox" id="filterOnlyActive" />
-                      <span>신규대출취급만</span>
-                    </label>
-                    <label class="admin-filter-check">
-                      <input type="checkbox" id="filterOnlyPartner" />
-                      <span>제휴업체만</span>
-                    </label>
-                  </div>
-                </div>
-              </div>
-
-              <div class="admin-field" style="margin-top:10px;">
-                <label>상품군 필터</label>
-                <div id="productFilterRow" class="admin-chip-row"></div>
-              </div>
-            </div>
-
-            <!-- 온투업체 리스트 (JS가 자동 생성) -->
-            <div id="lendersList" class="admin-field-group"></div>
-
-            <!-- 저장 버튼 -->
+            <!-- ✅ 검색창: 시안 위치용 -->
             <div class="admin-field-group">
-              <button type="button" id="saveLendersConfigBtn" class="admin-save-btn">
-                온투업체 네비게이션 설정 저장
-              </button>
-              <div id="lendersSaveStatus" class="admin-save-status"></div>
+              <div class="admin-field">
+                <label for="lendersSearchInput">온투업체 검색</label>
+                <input
+                  id="lendersSearchInput"
+                  type="text"
+                  class="admin-input"
+                  placeholder="업체명 검색 (예: FM, 에잇, 피플...)"
+                  autocomplete="off"
+                />
+              </div>
             </div>
 
-            <!-- 디버그용 JSON 뷰 -->
+            <!-- ✅ 액션바(전체 저장/상태): 시안의 ‘2번 구조’ 구현을 위해 자리 확보 -->
+            <div class="admin-actionbar" id="lendersActionBar">
+              <div class="admin-actionbar__left">
+                <span class="admin-actionbar__title">저장</span>
+                <span class="admin-actionbar__hint">업체별 저장 또는 전체 저장을 선택하세요.</span>
+              </div>
+              <div class="admin-actionbar__right">
+                <button type="button" id="saveLendersConfigBtn" class="admin-save-btn">
+                  전체 저장
+                </button>
+              </div>
+            </div>
+            <div id="lendersSaveStatus" class="admin-save-status"></div>
+
+            <!-- ✅ 온투업체 리스트 (JS가 자동 생성) -->
+            <div id="lendersList" class="admin-field-group">
+              <!-- admin-beta.js에서 동적으로 렌더링 -->
+            </div>
+
+            <!-- ✅ 디버그용 JSON 뷰 -->
             <div class="admin-subbox">
               <h3 class="admin-subbox-title">현재 설정 요약 (읽기전용)</h3>
               <p class="admin-subbox-help">
-                관리자 테스트용으로, 브라우저에 로드된 <code>lendersConfig</code> 내용을 확인할 수 있습니다.
+                브라우저에 로드된 <code>lendersConfig</code>를 확인합니다.
               </p>
               <pre id="lendersConfigPreview"
                    style="margin:0;font-size:11px;white-space:pre-wrap;word-break:break-all;color:#4b5563;background:#f9fafb;border-radius:8px;padding:10px;border:1px solid #e5e7eb;">
 (아직 불러온 설정이 없습니다.)</pre>
             </div>
+
           </div>
         </section>
 
@@ -349,9 +281,7 @@
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
-        <img src="/assets/logo/huchu-logo-white.png"
-             alt="HUCHU 로고"
-             class="beta-footer__logo-img" />
+        <img src="/assets/logo/huchu-logo-white.png" alt="HUCHU 로고" class="beta-footer__logo-img" />
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
