--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -9,10 +9,10 @@
   <!-- 기존 베타 공통 스타일 -->
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
   <!-- 관리자 전용 스타일 -->
-  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251215-admin" />
+  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251215-a1" />
 
   <!-- 관리자 전용 스크립트 -->
-  <script type="module" src="/assets/admin-beta.js?v=20251215-admin"></script>
+  <script type="module" src="/assets/admin-beta.js?v=20251215-a1"></script>
 </head>
 <body class="beta-body">
 
@@ -64,8 +64,8 @@
 
         <!-- 탭 버튼 -->
         <div class="admin-tabs">
-          <button class="admin-tab-btn is-active" data-tab="stats" type="button">온투업 통계 저장</button>
-          <button class="admin-tab-btn" data-tab="lenders" type="button">온투업체 정보 등록</button>
+          <button type="button" class="admin-tab-btn is-active" data-tab="stats">온투업 통계 저장</button>
+          <button type="button" class="admin-tab-btn" data-tab="lenders">온투업체 정보 등록</button>
         </div>
 
         <!-- ================== TAB 1: 온투업 통계 저장 ================== -->
@@ -102,17 +102,26 @@
                 </div>
                 <div class="admin-field">
                   <label for="statsTotalLoan">누적대출금액 (원)</label>
-                  <input type="text" id="statsTotalLoan" class="admin-input" data-type="money"
+                  <input type="text"
+                         id="statsTotalLoan"
+                         class="admin-input"
+                         data-type="money"
                          placeholder="예) 18358007760000" />
                 </div>
                 <div class="admin-field">
                   <label for="statsTotalRepaid">누적상환금액 (원)</label>
-                  <input type="text" id="statsTotalRepaid" class="admin-input" data-type="money"
+                  <input type="text"
+                         id="statsTotalRepaid"
+                         class="admin-input"
+                         data-type="money"
                          placeholder="예) 16924144010000" />
                 </div>
                 <div class="admin-field">
                   <label for="statsBalance">대출잔액 (원)</label>
-                  <input type="text" id="statsBalance" class="admin-input" data-type="money"
+                  <input type="text"
+                         id="statsBalance"
+                         class="admin-input"
+                         data-type="money"
                          placeholder="예) 1433867500000" />
                 </div>
               </div>
@@ -145,67 +154,103 @@
                     <tr data-key="부동산담보">
                       <td style="padding:6px 4px;">부동산담보</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number" class="admin-input js-ratio" data-key="부동산담보"
-                               min="0" max="100" step="0.1" placeholder="예) 43" />
+                        <input type="number"
+                               class="admin-input js-ratio"
+                               data-key="부동산담보"
+                               min="0" max="100" step="0.1"
+                               placeholder="예) 43" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text" class="admin-input js-amount" data-key="부동산담보"
-                               data-type="money" readonly />
+                        <input type="text"
+                               class="admin-input js-amount"
+                               data-key="부동산담보"
+                               data-type="money"
+                               readonly />
                       </td>
                     </tr>
+
                     <tr data-key="부동산PF">
                       <td style="padding:6px 4px;">부동산PF</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number" class="admin-input js-ratio" data-key="부동산PF"
+                        <input type="number"
+                               class="admin-input js-ratio"
+                               data-key="부동산PF"
                                min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text" class="admin-input js-amount" data-key="부동산PF"
-                               data-type="money" readonly />
+                        <input type="text"
+                               class="admin-input js-amount"
+                               data-key="부동산PF"
+                               data-type="money"
+                               readonly />
                       </td>
                     </tr>
+
                     <tr data-key="어음·매출채권담보">
                       <td style="padding:6px 4px;">어음·매출채권담보</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number" class="admin-input js-ratio" data-key="어음·매출채권담보"
+                        <input type="number"
+                               class="admin-input js-ratio"
+                               data-key="어음·매출채권담보"
                                min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text" class="admin-input js-amount" data-key="어음·매출채권담보"
-                               data-type="money" readonly />
+                        <input type="text"
+                               class="admin-input js-amount"
+                               data-key="어음·매출채권담보"
+                               data-type="money"
+                               readonly />
                       </td>
                     </tr>
+
                     <tr data-key="기타담보(주식 등)">
                       <td style="padding:6px 4px;">기타담보(주식 등)</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number" class="admin-input js-ratio" data-key="기타담보(주식 등)"
+                        <input type="number"
+                               class="admin-input js-ratio"
+                               data-key="기타담보(주식 등)"
                                min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text" class="admin-input js-amount" data-key="기타담보(주식 등)"
-                               data-type="money" readonly />
+                        <input type="text"
+                               class="admin-input js-amount"
+                               data-key="기타담보(주식 등)"
+                               data-type="money"
+                               readonly />
                       </td>
                     </tr>
+
                     <tr data-key="개인신용">
                       <td style="padding:6px 4px;">개인신용</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number" class="admin-input js-ratio" data-key="개인신용"
+                        <input type="number"
+                               class="admin-input js-ratio"
+                               data-key="개인신용"
                                min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text" class="admin-input js-amount" data-key="개인신용"
-                               data-type="money" readonly />
+                        <input type="text"
+                               class="admin-input js-amount"
+                               data-key="개인신용"
+                               data-type="money"
+                               readonly />
                       </td>
                     </tr>
+
                     <tr data-key="법인신용">
                       <td style="padding:6px 4px;">법인신용</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number" class="admin-input js-ratio" data-key="법인신용"
+                        <input type="number"
+                               class="admin-input js-ratio"
+                               data-key="법인신용"
                                min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text" class="admin-input js-amount" data-key="법인신용"
-                               data-type="money" readonly />
+                        <input type="text"
+                               class="admin-input js-amount"
+                               data-key="법인신용"
+                               data-type="money"
+                               readonly />
                       </td>
                     </tr>
                   </tbody>
@@ -226,48 +271,59 @@
         <!-- ================== TAB 2: 온투업체 정보 등록 ================== -->
         <section id="admin-tab-lenders" class="admin-tab-panel hide">
           <div class="admin-card">
-
             <div class="admin-field-group">
               <h2 class="admin-field-title">1. 온투업체 기본 설정</h2>
               <p class="admin-note">
                 온투업체별 <strong>신규대출 취급여부 / 제휴업체 여부</strong>,
-                <strong>취급 상품군</strong>, <strong>부동산 담보대출 세부조건</strong> 등을 등록합니다.<br />
-                <strong>제휴 ON</strong>인 업체만 입력/저장이 가능합니다.
+                <strong>취급 상품군</strong>, <strong>상담 채널</strong> 등을 등록합니다.<br />
+                이 설정값은 <strong>후추 네비게이션(베타)</strong>에서 추천 리스트 계산에 사용됩니다.
               </p>
             </div>
 
-            <!-- (a) 검색창: 이번에 "위치만" 조정 -->
-            <div class="admin-field-group">
-              <div class="admin-field">
-                <label for="lendersSearch">온투업체 검색</label>
-                <input
-                  type="text"
-                  id="lendersSearch"
-                  class="admin-input"
-                  placeholder="예) FM, 에잇퍼센트, 피플펀드…"
-                  autocomplete="off"
-                />
+            <!-- ✅ (C) 검색/필터 컨트롤 -->
+            <div class="admin-field-group admin-lenders-controls">
+              <div class="admin-field-grid admin-lenders-controls__grid">
+                <div class="admin-field">
+                  <label for="lenderSearchInput">온투업체 검색</label>
+                  <input id="lenderSearchInput"
+                         type="text"
+                         class="admin-input"
+                         placeholder="예) FM펀딩, 에잇퍼센트, 피플펀드..." />
+                </div>
+
+                <div class="admin-field">
+                  <label>필터</label>
+                  <div class="admin-filter-row">
+                    <label class="admin-filter-check">
+                      <input type="checkbox" id="filterOnlyActive" />
+                      <span>신규대출취급만</span>
+                    </label>
+                    <label class="admin-filter-check">
+                      <input type="checkbox" id="filterOnlyPartner" />
+                      <span>제휴업체만</span>
+                    </label>
+                  </div>
+                </div>
               </div>
-              <p class="admin-note" style="margin-top:-6px;">
-                검색은 표시만 필터링합니다. (저장 데이터에는 영향 없음)
-              </p>
+
+              <div class="admin-field" style="margin-top:10px;">
+                <label>상품군 필터</label>
+                <div id="productFilterRow" class="admin-chip-row"></div>
+              </div>
             </div>
 
             <!-- 온투업체 리스트 (JS가 자동 생성) -->
-            <div id="lendersList" class="admin-field-group">
-              <!-- admin-beta.js에서 LENDERS_MASTER 기준으로 lender-card들을 동적으로 렌더링 -->
-            </div>
+            <div id="lendersList" class="admin-field-group"></div>
 
-            <!-- 저장 버튼 영역(전체 저장) -->
-            <div class="admin-field-group admin-actions">
-              <!-- ✅ 업체별 저장 버튼은 각 카드 안에 배치(다음 JS에서 연결) -->
+            <!-- 저장 버튼 -->
+            <div class="admin-field-group">
               <button type="button" id="saveLendersConfigBtn" class="admin-save-btn">
-                전체 설정 저장
+                온투업체 네비게이션 설정 저장
               </button>
               <div id="lendersSaveStatus" class="admin-save-status"></div>
             </div>
 
-            <!-- 디버그용 JSON 뷰 (옵션) -->
+            <!-- 디버그용 JSON 뷰 -->
             <div class="admin-subbox">
               <h3 class="admin-subbox-title">현재 설정 요약 (읽기전용)</h3>
               <p class="admin-subbox-help">
@@ -277,7 +333,6 @@
                    style="margin:0;font-size:11px;white-space:pre-wrap;word-break:break-all;color:#4b5563;background:#f9fafb;border-radius:8px;padding:10px;border:1px solid #e5e7eb;">
 (아직 불러온 설정이 없습니다.)</pre>
             </div>
-
           </div>
         </section>
 
