--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -9,10 +9,10 @@
   <!-- 기존 베타 공통 스타일 -->
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
   <!-- 관리자 전용 스타일 -->
-  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251215-a2" />
+  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251215-a3" />
 
   <!-- 관리자 전용 스크립트 -->
-  <script type="module" src="/assets/admin-beta.js?v=20251215-a2"></script>
+  <script type="module" src="/assets/admin-beta.js?v=20251215-a3"></script>
 </head>
 <body class="beta-body">
 
@@ -154,103 +154,61 @@
                     <tr data-key="부동산담보">
                       <td style="padding:6px 4px;">부동산담보</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="부동산담보"
-                               min="0" max="100" step="0.1"
-                               placeholder="예) 43" />
+                        <input type="number" class="admin-input js-ratio" data-key="부동산담보"
+                               min="0" max="100" step="0.1" placeholder="예) 43" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="부동산담보"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="부동산담보" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="부동산PF">
                       <td style="padding:6px 4px;">부동산PF</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="부동산PF"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="부동산PF" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="부동산PF"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="부동산PF" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="어음·매출채권담보">
                       <td style="padding:6px 4px;">어음·매출채권담보</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="어음·매출채권담보"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="어음·매출채권담보" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="어음·매출채권담보"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="어음·매출채권담보" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="기타담보(주식 등)">
                       <td style="padding:6px 4px;">기타담보(주식 등)</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="기타담보(주식 등)"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="기타담보(주식 등)" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="기타담보(주식 등)"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="기타담보(주식 등)" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="개인신용">
                       <td style="padding:6px 4px;">개인신용</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="개인신용"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="개인신용" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="개인신용"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="개인신용" data-type="money" readonly />
                       </td>
                     </tr>
 
                     <tr data-key="법인신용">
                       <td style="padding:6px 4px;">법인신용</td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="number"
-                               class="admin-input js-ratio"
-                               data-key="법인신용"
-                               min="0" max="100" step="0.1" />
+                        <input type="number" class="admin-input js-ratio" data-key="법인신용" min="0" max="100" step="0.1" />
                       </td>
                       <td style="padding:6px 4px;text-align:right;">
-                        <input type="text"
-                               class="admin-input js-amount"
-                               data-key="법인신용"
-                               data-type="money"
-                               readonly />
+                        <input type="text" class="admin-input js-amount" data-key="법인신용" data-type="money" readonly />
                       </td>
                     </tr>
                   </tbody>
@@ -288,7 +246,7 @@
                 <input id="lenderSearchInput"
                        type="text"
                        class="admin-input"
-                       placeholder="예) FM펀딩, 에잇퍼센트, 피플펀드..." />
+                       placeholder="예) FM펀딩, 에잇퍼센트..." />
               </div>
             </div>
 
