--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -253,13 +253,26 @@
             <!-- 온투업체 리스트 (JS가 자동 생성) -->
             <div id="lendersList" class="admin-field-group"></div>
 
-            <!-- ✅ 전체 저장 버튼 (페이지 하단) -->
-            <div class="admin-field-group">
-              <button type="button" id="saveLendersConfigBtn" class="admin-save-btn">
-                전체 저장
-              </button>
-              <div id="lendersSaveStatus" class="admin-save-status"></div>
-            </div>
+             <!-- ✅ 전체 저장 + 백업(다운/업로드) -->
+<div class="admin-field-group">
+  <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center;">
+    <button type="button" id="saveLendersConfigBtn" class="admin-save-btn">전체 저장</button>
+    <button type="button" id="downloadLoanConfigBtn" class="admin-save-btn" style="background:#374151;">
+      백업 다운로드
+    </button>
+    <button type="button" id="uploadLoanConfigBtn" class="admin-save-btn" style="background:#6b7280;">
+      백업 업로드
+    </button>
+    <input id="loanConfigFileInput" type="file" accept="application/json" style="display:none;" />
+  </div>
+
+  <div id="lendersSaveStatus" class="admin-save-status"></div>
+  <div id="lendersBackupStatus" class="admin-save-status" style="color:#6b7280;"></div>
+
+  <p class="admin-note" style="margin-top:8px;">
+    ※ 로컬 백업은 <strong>이 브라우저(PC/계정)</strong>에만 저장됩니다. 다른 PC/브라우저에서는 보이지 않아요.
+  </p>
+</div>
           </div>
         </section>
 
